test/expected/declare_as3i.out
declare x as array static 3 of int
        ^
9: error: "static" arrays are illegal outside of function parameters
